--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-server.port=8080
-spring.servlet.multipart.enabled = false
-
 #Mysql properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/gym
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
